@@ -4,6 +4,7 @@
 + added localized description (daburna)
 x fixed problem with wrong demopeerlist saved in about:config (flori)
 x fixed "bgLoadURL not found" (flori)
+x fiexd problem with yacybar_crawljobs.rdf (flori)
 
 v 0.2.4 - 05.02.2008
 =====================================================================
